[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/assets/MobileRPG Resources/Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Slime.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/assets/MobileRPG Resources/Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/Battle.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://src/scenes/StatsPanel.gd" type="Script" id=6]
[ext_resource path="res://src/lookUptheme.tres" type="Theme" id=7]
[ext_resource path="res://src/scenes/SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/HealActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/Rat.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 10 ), ExtResource( 2 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 46, 81 )
texture = ExtResource( 3 )

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.207843 )
position = Vector2( 45, 81 )
texture = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_right = 91.0
margin_bottom = 47.0

[node name="NextRoom" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
theme = ExtResource( 7 )
text = "Enter Next room"

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -3.0
custom_constants/separation = 15

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 5.0
margin_right = 16.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.968627, 0.968627, 1 )
custom_constants/line_spacing = 4
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 31.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.968627, 0.968627, 1 )
custom_constants/line_spacing = 4
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 62.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.968627, 0.968627, 1 )
custom_constants/line_spacing = 4
text = "MP
10"
align = 1

[node name="TextBoxPanel" type="Panel" parent="UI"]
margin_left = -1.0
margin_top = 139.0
margin_right = 93.0
margin_bottom = 163.0
theme = ExtResource( 7 )

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 10.0
margin_top = 74.0
margin_right = 82.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_left = 40.0
margin_right = 72.0

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 45, 28 )

[node name="Slime" parent="EnemyPosition" instance=ExtResource( 2 )]
position = Vector2( 2, 2 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FadeToNewRoom"
anims/FadeToNewRoom = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoom" to="." method="_on_NextRoom_pressed"]
